LEP-4013 Fix for JDK 1.4 compilation
git-svn-id: svn://svn.liferay.com/repos/public/portal/trunk@10259 05bdf26c-840f-0410-9ced-eb539d925f36